testdata/language-features/adt/adt02.reject.out
type error: can not unify
  /home/csaba/haskell/lambdacube-compiler/.stack-work/install/x86_64-linux/lts-10.4/8.2.2/share/x86_64-linux-ghc-8.2.2/lambdacube-compiler-0.6.1.0/lc/Internals.lc:63:6:
  data Bool = False | True
       ^^^^
with
  /home/csaba/haskell/lambdacube-compiler/.stack-work/install/x86_64-linux/lts-10.4/8.2.2/share/x86_64-linux-ghc-8.2.2/lambdacube-compiler-0.6.1.0/lc/Internals.lc:58:6:
  data Int
       ^^^
in proj
------------ trace
'Data3 :: Type
Data3 :: Bool -> Char -> Bool -> Data3
Data31 :: Int -> String -> Int -> Data3
case'Data3
  :: forall (a :: Data3 -> Type)
    -> (forall (b :: Bool) (c :: Char) (d :: Bool) -> a ('Data3 b c d))
      -> (forall (e :: Int) (f :: String) (g :: Int) -> a ('Data31 e f g))
        -> forall (h :: Data3) -> a h
match'Data3 :: forall (a :: Type -> Type) -> a Data3 -> forall b -> a b -> a b
!type error: can not unify
  /home/csaba/haskell/lambdacube-compiler/.stack-work/install/x86_64-linux/lts-10.4/8.2.2/share/x86_64-linux-ghc-8.2.2/lambdacube-compiler-0.6.1.0/lc/Internals.lc:63:6:
  data Bool = False | True
       ^^^^
with
  /home/csaba/haskell/lambdacube-compiler/.stack-work/install/x86_64-linux/lts-10.4/8.2.2/share/x86_64-linux-ghc-8.2.2/lambdacube-compiler-0.6.1.0/lc/Internals.lc:58:6:
  data Int
       ^^^
in proj
------------ tooltips
2:6-2:11
    Type | Type | Type | Type | Type | Type | Type | Type
2:6-5:25
    Type | Type
2:6-7:11
    Type | Type
2:6-10:20
    Type | Type
3:5-3:10
    Bool -> Char -> Bool -> Data3 | Data3 | Type | Type | Type | Type
3:21-3:25
    Type
4:21-4:25
    Type
5:21-5:25
    Type
7:5-7:11
    Int -> String -> Int -> Data3 | Data3 | Type | Type | Type | Type
8:17-8:20
    Type
9:17-9:23
    Type
10:17-10:20
    Type